# prisoners_rusty_riddle

./: Cargo.toml  readme.md  wapm.toml
.github/workflows/: release.yml  rust-clippy.yml  wapm-publish.yml
src/: main.rs  session.rs
