[package]
name = "prisoners_rusty_riddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = { version = "3.2.14", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.5"